# folio_arbor

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: .env  Cargo.toml  README.md  folio_arbor.db  tauri.conf.json
src-tauri/config/: log4rs.yaml
src-tauri/migrations/: 20250826230446_create_literature.down.sql  20250826230446_create_literature.up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: literature_note_commands.rs  mod.rs  tag_commands.rs
src-tauri/src/db/: connections.rs  mod.rs
src-tauri/src/db/models/: literature_note.rs  mod.rs  tag.rs
src-tauri/src/services/: literature_note_service.rs  mod.rs  tag_service.rs
src-tauri/src/utils/: logs.rs  mod.rs
src/components/: TiptapEditor.vue
src/components/TiptapEditor/: MentionList.vue  TiptapEditor.vue  suggestions.js
src/layouts/: MainLayout.vue
src/models/: model.ts
src/router/: index.ts
src/styles/: style.css
src/views/Literature/: index.vue
src/views/Setteings/: index.vue
