[package]
name = "folio_arbor"
version = "0.1.0"
description = "A Tauri App"
authors = ["yellowfish"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folio_arbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
log = "0.4"
log4rs = "1.4.0-rc2"
derive_more = { version = "2.0.1", features = ["debug"] }
anyhow = "1.0.99"
